# fs-transaction

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
src/fs_transaction/: __init__.py  actions.py  atomic.py  core.py
tests/: test_transaction.py
